[package]
name = "WikiReader"
version = "0.1.0"
authors = ["Anton Shramko <antonshramko@yandex.ru>"]

[dependencies]
serde_json = "1.0"
matches = "0.1.6"
serde_derive = "*"
inflections = "*"
env_logger = "0.3"
base64 = "0.6.0"
mowl = "1.1.0"
serde = "*"
gdk-pixbuf = "0.2"
glib = "0.3"
gio = "0.2"
gdk = "0.6"
maplit = "*"
hyper = "0.11"
reqwest = "0.7"
url = "1.2"

[dependencies.gtk]
version = "0.2"
features = ["v3_22"]