[package]
name = "WikiReader"
version = "0.1.0"
authors = ["Anton Shramko <antonshramko@yandex.ru>"]
description = "Application for simple reading wiki sites"

[dependencies]
serde_json = "1.0"
serde_derive = "*"
serde = "*"
inflections = "*"
gdk-pixbuf = "0.2"
pango = "0.2.0"
glib = "0.3"
gio = "0.2"
gdk = "0.6"
maplit = "*"
hyper = "0.11"
reqwest = "0.7"
url = "1.2"

[dependencies.gtk]
version = "0.2"
features = ["v3_22"]

[features]
default = []
debug = []

[package.metadata.bundle]
name = "WikiReader"
identifier = "org.gtk.wikireader"
icon = ["logo.png"]
version = "0.1.0"
resources = ["assets", "wiki-parser"]
copyright = "Copyright (c) Anton Shramko 2017. All rights reserved."
short_description = "Application for simple reading wiki sites"
long_description = """
Application for simple reading wiki-sites:
Wikipedia, Dramatica, Lurkmore
"""