[package]
name = "WikiReader"
version = "0.1.0"
authors = ["Anton Shramko <antonshramko@yandex.ru>"]
description = "Application for simple reading wiki sites"

[dependencies]
fluent-locale = "0.2.0"
serde_json = "1.0"
tokio-core = "0.1"
inflections = "*"
tokio-io = "0.1"
futures = "0.1"
reqwest = "0.7"
hyper = "0.11"
fluent = "*"
maplit = "*"
url = "1.2"

gdk-pixbuf = "0.2"
pango = "0.2.0"
glib = "0.3"
gio = "0.2"
gdk = "0.6" 

[dependencies.gtk]
version = "0.2"
features = ["v3_22"]

[features]
default = []
release = []

[package.metadata.bundle]
name = "WikiReader"
identifier = "org.wikireader"
icon = ["logo.png"]
version = "0.1.0"
resources = ["assets", "wiki-parser"]
copyright = "Copyright (c) Anton Shramko 2017. All rights reserved."
short_description = "Application for simple reading wiki sites"
long_description = """
Application for simple reading wiki-sites:
Wikipedia, Dramatica, Lurkmore
"""